--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   local_auth: ^2.1.7
   share_plus: ^7.2.2
   image_picker: ^1.0.7
+  mobile_scanner: ^3.5.6
   
   # Platform Channels
   pigeon: ^13.0.0
