--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   share_plus: ^7.2.2
   image_picker: ^1.0.7
   mobile_scanner: ^3.5.6
+  image: ^4.1.3
   
   # Platform Channels
   pigeon: ^13.0.0
