--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   provider: ^6.1.5
+
+  package_info_plus: ^8.0.2
+  share_plus: ^10.0.2
   
   # Session Protocol Dependencies
   crypto: ^3.0.6
@@ -66,7 +69,7 @@ dependencies:
   device_info_plus: ^10.0.0
   font_awesome_flutter: ^10.7.0
   local_auth: ^2.1.7
-  share_plus: ^7.2.2
+
   image_picker: ^1.0.7
   mobile_scanner: ^3.5.6
   image: ^4.1.3
