--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,15 +12,39 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     
-    <!-- Notification permissions -->
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+            <!-- Notification permissions -->
+        <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+        <uses-permission android:name="android.permission.VIBRATE" />
+        <uses-permission android:name="android.permission.WAKE_LOCK" />
+        <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+        <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+        <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+        <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+        <!-- Badge permissions for app icon -->
+        <uses-permission android:name="com.sec.android.provider.badge.permission.READ" />
+        <uses-permission android:name="com.sec.android.provider.badge.permission.WRITE" />
+        <uses-permission android:name="com.htc.launcher.permission.READ_SETTINGS" />
+        <uses-permission android:name="com.htc.launcher.permission.UPDATE_SHORTCUT" />
+        <uses-permission android:name="com.sonyericsson.home.permission.BROADCAST_BADGE" />
+        <uses-permission android:name="com.sonymobile.home.permission.PROVIDER_INSERT_BADGE" />
+        <uses-permission android:name="com.anddoes.launcher.permission.UPDATE_COUNT" />
+        <uses-permission android:name="com.majeur.launcher.permission.UPDATE_BADGE" />
+        <uses-permission android:name="com.huawei.android.launcher.permission.CHANGE_BADGE" />
+        <uses-permission android:name="com.huawei.android.launcher.permission.READ_SETTINGS" />
+        <uses-permission android:name="com.huawei.android.launcher.permission.WRITE_SETTINGS" />
+        <uses-permission android:name="android.permission.READ_APP_BADGE" />
+        <uses-permission android:name="com.oppo.launcher.permission.READ_SETTINGS" />
+        <uses-permission android:name="com.oppo.launcher.permission.WRITE_SETTINGS" />
+        <uses-permission android:name="me.everything.badger.permission.BADGE_COUNT_READ" />
+        <uses-permission android:name="me.everything.badger.permission.BADGE_COUNT_WRITE" />
     
     <application
         android:label="SeChat"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:allowBackup="true"
-        android:theme="@style/NormalTheme">
+        android:theme="@style/NormalTheme"
+        android:foregroundServiceType="dataSync">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -48,25 +72,26 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-            
-        <!-- Firebase Cloud Messaging Service -->
-        <service
-            android:name=".SeChatFirebaseMessagingService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
         
-        <!-- Default notification icon -->
+        <!-- Notification channel configuration -->
         <meta-data
-            android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_notification" />
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="sechat_notifications" />
+        
+        <!-- Boot completed receiver for notifications -->
+        <receiver
+            android:name=".BootReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+                <action android:name="android.intent.action.PACKAGE_REPLACED" />
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
             
-        <!-- Default notification color -->
-        <meta-data
-            android:name="com.google.firebase.messaging.default_notification_color"
-            android:resource="@color/notification_color" />
+
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
