--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,42 +1,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Camera permissions for QR code scanning -->
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
-    
-    <!-- Storage permissions for saving QR codes and images -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    
     <!-- Internet permissions for messaging -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     
-            <!-- Notification permissions -->
-        <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-        <uses-permission android:name="android.permission.VIBRATE" />
-        <uses-permission android:name="android.permission.WAKE_LOCK" />
-        <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-        <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-        <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
-        <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
-        <!-- Badge permissions for app icon -->
-        <uses-permission android:name="com.sec.android.provider.badge.permission.READ" />
-        <uses-permission android:name="com.sec.android.provider.badge.permission.WRITE" />
-        <uses-permission android:name="com.htc.launcher.permission.READ_SETTINGS" />
-        <uses-permission android:name="com.htc.launcher.permission.UPDATE_SHORTCUT" />
-        <uses-permission android:name="com.sonyericsson.home.permission.BROADCAST_BADGE" />
-        <uses-permission android:name="com.sonymobile.home.permission.PROVIDER_INSERT_BADGE" />
-        <uses-permission android:name="com.anddoes.launcher.permission.UPDATE_COUNT" />
-        <uses-permission android:name="com.majeur.launcher.permission.UPDATE_BADGE" />
-        <uses-permission android:name="com.huawei.android.launcher.permission.CHANGE_BADGE" />
-        <uses-permission android:name="com.huawei.android.launcher.permission.READ_SETTINGS" />
-        <uses-permission android:name="com.huawei.android.launcher.permission.WRITE_SETTINGS" />
-        <uses-permission android:name="android.permission.READ_APP_BADGE" />
-        <uses-permission android:name="com.oppo.launcher.permission.READ_SETTINGS" />
-        <uses-permission android:name="com.oppo.launcher.permission.WRITE_SETTINGS" />
-        <uses-permission android:name="me.everything.badger.permission.BADGE_COUNT_READ" />
-        <uses-permission android:name="me.everything.badger.permission.BADGE_COUNT_WRITE" />
+    <!-- Notification permissions for local notifications -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    
+    <!-- App badge permissions for notification counts -->
+    <uses-permission android:name="com.sec.android.provider.badge.permission.READ" />
+    <uses-permission android:name="com.sec.android.provider.badge.permission.WRITE" />
+    <uses-permission android:name="com.htc.launcher.permission.READ_SETTINGS" />
+    <uses-permission android:name="com.htc.launcher.permission.UPDATE_SHORTCUT" />
+    <uses-permission android:name="com.sonyericsson.home.permission.BROADCAST_BADGE" />
+    <uses-permission android:name="com.sonymobile.home.permission.PROVIDER_INSERT_BADGE" />
+    <uses-permission android:name="com.anddoes.launcher.permission.UPDATE_COUNT" />
+    <uses-permission android:name="com.majeur.launcher.permission.UPDATE_BADGE" />
+    <uses-permission android:name="com.huawei.android.launcher.permission.CHANGE_BADGE" />
+    <uses-permission android:name="com.huawei.android.launcher.permission.READ_SETTINGS" />
+    <uses-permission android:name="com.huawei.android.launcher.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_APP_BADGE" />
+    <uses-permission android:name="com.oppo.launcher.permission.READ_SETTINGS" />
+    <uses-permission android:name="com.oppo.launcher.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="me.everything.badger.permission.BADGE_COUNT_READ" />
+    <uses-permission android:name="me.everything.badger.permission.BADGE_COUNT_WRITE" />
     
     <application
         android:label="SeChat"
@@ -73,11 +64,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         
-        <!-- Notification channel configuration -->
-        <meta-data
-            android:name="com.google.firebase.messaging.default_notification_channel_id"
-            android:value="sechat_notifications" />
-        
         <!-- Boot completed receiver for notifications -->
         <receiver
             android:name=".BootReceiver"
@@ -90,9 +76,8 @@
                 <data android:scheme="package" />
             </intent-filter>
         </receiver>
-            
-
     </application>
+    
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
          https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
