--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,8 +68,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   local_auth: ^2.1.7
 
-  image_picker: ^1.0.7
-  mobile_scanner: ^3.5.6
+  # Image processing for QR codes (local only)
   image: ^4.1.3
   flutter_local_notifications: ^18.0.0
   
