--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   # Image processing for QR codes (local only)
   image: ^4.1.3
   flutter_local_notifications: ^18.0.0
+  permission_handler: ^11.0.1
   
   # Platform Channels
   pigeon: ^13.0.0
