--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,6 +110,8 @@ flutter:
   assets:
     - assets/logo/seChat_Logo.png
     - assets/logo/seChat_SplashLogo.png
+    - assets/logo/seChat_SplashLogo_ios.png
+    - assets/logo/seChat_SplashLogo_ios.png
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -144,7 +146,8 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/logo/seChat_Logo.png"
+  image_path_android: "assets/logo/seChat_Logo.png"
+  image_path_ios: "assets/logo/seChat_Logo_ios.png"
   min_sdk_android: 21
   adaptive_icon_background: "#ffffff"
   adaptive_icon_foreground: "assets/logo/seChat_Logo.png"
@@ -156,6 +159,8 @@ flutter_native_splash:
   color_dark: "#ffffff"
   image: "assets/logo/seChat_SplashLogo.png"
   image_dark: "assets/logo/seChat_SplashLogo.png"
+  image_ios: "assets/logo/seChat_SplashLogo_ios.png"
+  image_dark_ios: "assets/logo/seChat_SplashLogo_ios.png"
   android_12:
     icon_background_color: "#ffffff"
     icon_background_color_dark: "#ffffff"
