--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -25,7 +25,7 @@
 		<key>CFBundleVersion</key>
 		<string>$(FLUTTER_BUILD_NUMBER)</string>
 		<key>ITSAppUsesNonExemptEncryption</key>
-		<false/>
+		<true/>
 		<key>LSRequiresIPhoneOS</key>
 		<true/>
 		<key>UIApplicationSupportsIndirectInputEvents</key>
@@ -33,8 +33,8 @@
 		<key>UIBackgroundModes</key>
 		<array>
 			<string>remote-notification</string>
-			<string>background-processing</string>
-			<string>background-fetch</string>
+			<string>fetch</string>     
+    		<string>processing</string>  
 		</array>
 		<key>UILaunchStoryboardName</key>
 		<string>LaunchScreen</string>
